# multi-class-unet

./: .gitignore  config.py  copy_dataset.py  dataset.py  dicom_tools.py  img_utils.py  plot_results.py  plot_stats.py  predict.py  predict_test.py  pyproject.toml  requirements.txt  test2.py  train.py  train_yolo_dataset.py
prostate_segmentation/prostate_seg/: args.yaml
prostate_segmentation/prostate_seg3/: args.yaml  results.csv
prostate_segmentation/prostate_seg4/: args.yaml  results.csv
src/: dataset.py  dicom_tools.py  img_utils.py  plot_results.py  predict.py  predict_test.py  test2.py  test_rt_utils.py  test_sitk.py  test_sitk_save_image.py  train.py  utils.py  views.py  yolo_utils.py
src/scripts/: plot_stats.py  test_sitk_save_image.py
src/unet/: model.py  predict.py  predict_test.py  train.py
src/yolo/: predict_yolo.py  prostate.yml  train_yolo_dataset.py
